Refactor UI for user resume and education details
The dropdown menu within the user navigation bar has been refactored to consolidate the "Edit Resume" and "AI Resume" options into a single option. Aesthetic and structural changes have been made to the education details section in the templates for a more user-friendly interface. Tabular representation has been replaced by a more visually appealing and compact card-like representation.

--- a/users/templates/ai_add_education.html
+++ b/users/templates/ai_add_education.html
@@ -1,27 +1,27 @@
-<tr>
-    <td>{{ form.title }}
-        {{ form.title.errors}}
-    </td>
-    <td>{{ form.description }}
-        {{ form.description.errors }}
-    </td>
-
-    <td><a href="#"
-            hx-post="{% url 'add_education_submit' %}"
-            hx-target="closest tr"
-            hx-swap="outerHTML"
-            hx-include="closest tr"
-            hx-encoding="multipart/form-data"
-            class="text-secondary">
-            Add
-        </a>
-    </td>
-    <td><a href="#"
-            hx-get="{% url 'add_education_cancel' %}"
-            hx-target="closest tr"
-            hx-swap="outerHTML"
-            class="text-secondary">
-            Cancel
-        </a>
-    </td>
-</tr>
+<!-- Education Section -->
+<div class="container">
+        <div class="row row-cols-2">
+            <div class="col"><h5>{{ form.title }}</h5></div>
+            <div class="col d-flex justify-content-end">
+            <a href="#"
+                hx-post="{% url 'add_education_submit' %}"
+                hx-target="closest .container"
+                hx-swap="outerHTML"
+                hx-include="closest .container"
+                hx-encoding="multipart/form-data"
+                class="text-secondary">
+                Add
+            </a>
+            <a href="#"
+                hx-get="{% url 'add_education_cancel' %}"
+                hx-target="closest .container"
+                hx-swap="outerHTML"
+                class="text-secondary">
+                Cancel
+            </a>
+            </div>
+        </div>
+        <p class="card-text">{{ form.description }}</p>
+        <hr />
+</div>
+<!-- End Education Section -->
