--- a/users/templates/education_list.html
+++ b/users/templates/education_list.html
@@ -1,12 +1,5 @@
-<table class="table table-striped w-100 d-block d-md-table">
-    <thead>
-        <th>Title</th>
-        <th>Description</th>
-    </thead>
-
-    <tbody>
-        {% for education in education_info %}
-            {% include 'education_row.html' %}
-        {% endfor %}
-    </tbody>
-</table>
+<div id="edu-list">
+    {% for education in education_info %}
+        {% include 'education_row.html' %}
+    {% endfor %}
+</div>
