--- a/users/templates/experience_row.html
+++ b/users/templates/experience_row.html
@@ -27,7 +27,8 @@
                   hx-swap="outerHTML swap:ls"
                   hx-delete="{% url 'ai_delete_experience' experience.id %}"
                   class="btn btn-danger mx-1"
-                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button>
+                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete
+          </button>
       </div>
     </div>
 
