--- a/users/templates/education_row.html
+++ b/users/templates/education_row.html
@@ -1,6 +1,6 @@
 <!-- Education Section -->
 <div class="container">
-        <div class="row row-cols-2">
+        <div class="row row-cols-2 mt-2">
             <div class="col"><h5>{{ education.title }}</h5></div>
             <div class="col d-flex justify-content-end">
                 <button
