Update HTML templates for better UI
The HTML templates 'ai_resume.html', 'ai_add_education.html', and 'ai_edit_education.html' have been updated. The add button and the query result components in the education and experience section in 'ai_resume.html' are rearranged into a card layout for better UI. Additionally, minor tweaks are made in 'ai_add_education.html' and 'ai_edit_education.html' for better alignment.

--- a/users/templates/ai_add_education.html
+++ b/users/templates/ai_add_education.html
@@ -1,6 +1,6 @@
 <!-- Education Section -->
 <div class="container">
-        <div class="row row-cols-2">
+        <div class="row row-cols-2 mt-3">
             <div class="col">
                 <h5>{{ form.title }}</h5>
                 {% for error in form.title.errors %}
