--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -7,32 +7,41 @@
           <div class="col 6">
 
             <h3>Education</h3>
-              <button
-                      hx-get="{% url 'ai_add_education' %}"
-                      hx-target="#edu-list"
-                      hx-swap="afterbegin"
-                      class="btn btn-success btn-sm">Add
-              </button>
-              <div id="query_result"
-                   hx-target="this"
-                   hx-swap="innerHTML"
-                   hx-get="{% url 'get_education_list' %}"
-                   hx-trigger="load">
+              <div class="card my-3">
+                  <div class="card-body">
+                      <button
+                              hx-get="{% url 'ai_add_education' %}"
+                              hx-target="#edu-list"
+                              hx-swap="afterbegin"
+                              class="btn btn-success btn-sm mx-2">Add
+                      </button>
+                      <div id="query_result"
+                           hx-target="this"
+                           hx-swap="innerHTML"
+                           hx-get="{% url 'get_education_list' %}"
+                           hx-trigger="load">
+                      </div>
+                  </div>
               </div>
 
-            <h3>Experience</h3>
-               <button
-                      hx-get="{% url 'add_experience_submit' %}"
-                      hx-target="#exp-list"
-                      hx-swap="afterbegin"
-                      class="btn btn-success btn-sm">Add
-              </button>
 
-              <div id="exp_result"
-                   hx-target="this"
-                   hx-swap="innerHTML"
-                   hx-get="{% url 'get_experience_list' %}"
-                   hx-trigger="load">
+            <h3>Experience</h3>
+              <div class="card">
+                  <div class="card-body">
+                       <button
+                              hx-get="{% url 'add_experience_submit' %}"
+                              hx-target="#exp-list"
+                              hx-swap="afterbegin"
+                              class="btn btn-success btn-sm mx-2">Add
+                      </button>
+
+                      <div id="exp_result"
+                           hx-target="this"
+                           hx-swap="innerHTML"
+                           hx-get="{% url 'get_experience_list' %}"
+                           hx-trigger="load">
+                      </div>
+                  </div>
               </div>
           </div>
             <!-- End First Column -->
