Added UserSkill functionality to website
A UserSkillForm was created in forms.py and a corresponding template was generated in add_user_skill.html. Changes were made to users/templates/ai_resume.html, skill_list.html and views.py to accommodate the addition and deletion of UserSkills. The URL configuration in users/urls.py was also updated to route UserSkillForm submissions.

--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -9,8 +9,8 @@
               <div class="card my-3">
                   <div class="card-body">
                       <button
-                              hx-get="#"
-                              hx-target="#edu-list"
+                              hx-get="{% url 'ai_skill_add' %}"
+                              hx-target="#skill-add"
                               hx-swap="afterbegin"
                               class="btn btn-success btn-sm mx-2">Add
                       </button>
@@ -27,7 +27,7 @@
               <div class="card my-3">
                   <div class="card-body">
                       <button
-                              hx-get="{% url 'ai_add_education' %}"
+                              hx-get="{% url 'add_education_submit' %}"
                               hx-target="#edu-list"
                               hx-swap="afterbegin"
                               class="btn btn-success btn-sm mx-2">Add
