--- a/users/templates/skill_list.html
+++ b/users/templates/skill_list.html
@@ -2,19 +2,7 @@
 <div id="skill-add">
 <div class="row row-cols-5">
   {% for skill in uskills %}
-    <div class="col mx-1 my-1 py-1 position-relative">
-      {{ skill.skill_name }}
-      <a href="#">
-        <button
-              hx-confirm="Are you sure"
-              hx-target="closest .col"
-              hx-swap="outerHTML swap:ls"
-              hx-delete="{% url 'ai_skill_delete' skill.id %}"
-              class="btn btn-danger mx-1 float-end"
-              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">X
-        </button>
-      </a>
-    </div>
+    {% include 'skill_col.html' %}
   {% endfor %}
 </div>
 </div>
