Remove id attribute from skill_col div
The ID attribute in the skill_col division of the user template has been removed. This change simplifies the CSS by eliminating the need to override this specific ID. Now standard classes can be used for styling.

--- a/users/templates/skill_col.html
+++ b/users/templates/skill_col.html
@@ -1,4 +1,4 @@
-<div id="skill-col" class="col mx-1 my-1 py-1 position-relative">
+<div class="col mx-1 my-1 py-1 position-relative">
     {{ skill.skill_name }}
     <a href="#">
         <button
