--- a/recruiters/templates/add_joblisting.html
+++ b/recruiters/templates/add_joblisting.html
@@ -7,6 +7,12 @@
             <h1>Add Job Listing</h1>
                 <form method="POST" action="{% url 'add_job' %}">
                     {% csrf_token %}
+                     <button
+                              hx-get="{% url 'job_skill_add' %}"
+                              hx-target="#skill-add"
+                              hx-swap="afterbegin"
+                              class="btn btn-success btn-sm mb-2">Add Skill
+                      </button>
                     <p>
                         <strong>Skills: </strong>
                         {% for skill in request.session.job_skills %}
