Added Job Skills feature to Job Listing
This commit involves the modification and creation of new path in urls.py to include 'get_job_skills'. Two views have been added in views.py: 'job_skill_add' and 'get_job_skills'. These handle addition and retrieval of job skills respectively. Changes also include new templates for displaying added job skills. Finally, job skill addition mechanism in 'add_joblisting.html' template has been updated to use the new views.

--- a/recruiters/templates/add_joblisting.html
+++ b/recruiters/templates/add_joblisting.html
@@ -9,15 +9,18 @@
                     {% csrf_token %}
                      <button
                               hx-get="{% url 'job_skill_add' %}"
-                              hx-target="#skill-add"
+                              hx-target="#add-job-skill"
                               hx-swap="afterbegin"
                               class="btn btn-success btn-sm mb-2">Add Skill
                       </button>
                     <p>
                         <strong>Skills: </strong>
-                        {% for skill in request.session.job_skills %}
-                            {{ skill.1 }},
-                        {% endfor %}
+                        <div id="skill-result"
+                            hx-target="this"
+                            hx-swap="innerHTML"
+                            hx-get="{% url 'get_job_skills' %}"
+                            hx-trigger="load">
+                      </div>
                     </p>
 
                     <div class="mb-3">
