--- a/recruiters/templates/add_job_skill.html
+++ b/recruiters/templates/add_job_skill.html
@@ -5,7 +5,7 @@
             </div>
             <div class="col d-flex justify-content-end">
             <a href=""
-                hx-get=""
+                hx-get="#"
                 hx-target="closest .container"
                 hx-swap="outerHTML"
                 class="text-secondary mx-3">
