Refactor code and modify database schema related to skills
In this update, we refactored the code and modified the database schema related to skills across the application. A key change is the removal of foreign key 'skill' from 'UserSkill' and 'JobSkill' models, replacing it with 'skill_name'. This change was made to simplify skill management. HTML for the 'Add Job Listing' page was also modified for layout improvements.

--- a/recruiters/templates/add_joblisting.html
+++ b/recruiters/templates/add_joblisting.html
@@ -4,7 +4,10 @@
 <div class="container">
     <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
-            <h1>Add Job Listing</h1>
+            <h3>Add Job Listing</h3>
+
+                <div class="card">
+                    <div class="card-body">
                      <button
                               hx-get="{% url 'job_skill_add' %}"
                               hx-target="#add-job-skill"
@@ -17,6 +20,9 @@
                             hx-get="{% url 'get_job_skills' %}"
                             hx-trigger="load">
                       </div>
+                    </div>
+                </div>
+
                 <form method="POST" action="{% url 'add_job' %}">
                     {% csrf_token %}
                     <div class="mb-3">
