Updated job editing functionality and refactored code structure
Moved "edit_job" function from "website/views.py" to "recruiters/views.py" for better code organization. Added "Add Skill" button to job editing page and implemented functionality to fetch and display session skills. Also made minor change in the representation of JobSkill model in "website/models.py".

--- a/website/templates/edit_joblisting.html
+++ b/website/templates/edit_joblisting.html
@@ -5,6 +5,24 @@
     <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
             <h1>Edit Job Listing</h1>
+
+             <div class="card">
+                    <div class="card-body">
+                     <button
+                              hx-get="{% url 'job_skill_add' %}"
+                              hx-target="#add-job-skill"
+                              hx-swap="afterbegin"
+                              class="btn btn-success btn-sm mb-2">Add Skill
+                      </button>
+                        <div id="skill-result"
+                            hx-target="this"
+                            hx-swap="innerHTML"
+                            hx-get="{% url 'get_session_skills' job_id %}"
+                            hx-trigger="load">
+                      </div>
+                    </div>
+                </div>
+
                 <form method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
