Add cancellation functionality for adding skills
This commit introduces the ability to cancel the action of adding a skill both for the user and the job listing. It does this by introducing new URLs, views, and updating the template. Also, slight adjustment was done on the template to enhance resume editing.

--- a/recruiters/templates/add_job_skill.html
+++ b/recruiters/templates/add_job_skill.html
@@ -5,7 +5,7 @@
             </div>
             <div class="col d-flex justify-content-end">
             <a href=""
-                hx-get="#"
+                hx-get="{% url 'job_skill_cancel' %}"
                 hx-target="closest .container"
                 hx-swap="outerHTML"
                 class="text-secondary mx-3">
