--- a/recruiters/templates/add_joblisting.html
+++ b/recruiters/templates/add_joblisting.html
@@ -6,7 +6,7 @@
         <div class="col-lg-6">
             <h3>Add Job Listing</h3>
 
-                <div class="card">
+                <div class="card mb-3">
                     <div class="card-body">
                      <button
                               hx-get="{% url 'job_skill_add' %}"
