--- a/users/templates/experience_row.html
+++ b/users/templates/experience_row.html
@@ -44,7 +44,7 @@
             {% if experience.task_four %} <li>{{ experience.task_four }}</li> {% endif %}
             {% if experience.task_five %} <li>{{ experience.task_five }}</li> {% endif %}
             {% if experience.task_six %} <li>{{ experience.task_six }}</li> {% endif %}
-            {% if eexperiencexp.task_seven %} <li>{{ experience.task_seven }}</li> {% endif %}
+            {% if experience.task_seven %} <li>{{ experience.task_seven }}</li> {% endif %}
             {% if experience.task_eight %} <li>{{ experience.task_eight }}</li> {% endif %}
             {% if experience.task_nine %} <li>{{ experience.task_nine }}</li> {% endif %}
             {% if experience.task_ten %} <li>{{ experience.task_ten }}</li> {% endif %}
