--- a/users/templates/ai_about_me.html
+++ b/users/templates/ai_about_me.html
@@ -1,18 +1,9 @@
-<p>
-    {{ about_me }}
-</p>
-
-<button
-    hx-get="{% url 'ai_about_update' %}"
-    hx-target="#ai_about_me"
-    hx-swap="innerHTML"
-    class="btn md-yellow-button mb-2">
-  Update
-</button>
-
-<button
-    id="reset-about"
-    class="btn md-yellow-button mb-2"
-    onclick="enableJeffreyButton()">
-  Reset
-</button>
+<form method="POST" action="{% url 'ai_about_update' %}">
+    {% csrf_token %}
+    <textarea name="about" cols="40" rows="10" hidden="true" style="display: none;">
+    {{ about_me | safe }}
+    </textarea>
+      <div class="col d-flex justify-content-end">
+      <button type="submit" class="btn btn-primary mb-2">Update</button>
+  </div>
+</form>
